--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,15 @@
 <a href="/">
     <h1>Logo</h1>
 </a>
-<a href="/room">
-    <h1>Room</h1>
-</a>
+
+<form action="{% url 'home' %}" method="GET">
+    <input type="text" name="q" placeholder="Search rooms...">
+</form>
+{% if request.user.is_authenticated %}
+<p>Hello {{request.user}}</p>
+<a href="{% url 'logout' %}">Logout</a>
+{% else %}
+<a href="{% url 'login' %}">Login</a>
+{% endif %}
 
 <hr>
